--- a/app/src/main/res/layout/alert_window.xml
+++ b/app/src/main/res/layout/alert_window.xml
@@ -32,30 +32,30 @@ android:backgroundTint="@color/white"
 
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="52dp"
             android:id="@+id/imge"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="52dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.469"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/times"/>
+            app:lottie_rawRes="@raw/times" />
 
         <TextView
             android:id="@+id/des"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@id/imge"
-            app:layout_constraintHorizontal_bias="0.628"
-            app:layout_constraintStart_toStartOf="@id/imge"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imge"
             tools:text="des" />
 
