--- a/app/src/main/res/layout/alert_window.xml
+++ b/app/src/main/res/layout/alert_window.xml
@@ -51,9 +51,9 @@ android:backgroundTint="@color/white"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:padding="5dp"
+            android:textSize="15sp"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imge"
