--- a/app/src/main/res/drawable/background_evening.xml
+++ b/app/src/main/res/drawable/background_evening.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="270"
-        android:endColor="@color/eveningBottomGradientColor"
+        android:endColor="@color/baby_blue"
         android:startColor="@color/eveningTopGradientColor" />
 </shape>
